// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | backend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | frontend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > explain-code | fullstack | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | backend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | frontend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-directive | fullstack | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | backend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | frontend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-spec | fullstack | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | backend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | frontend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > gen-code-sys | fullstack | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/go/setup/constraints",
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/go/environments/go-api/rules",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/tasks/test-code/languages/go/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | backend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-setup",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | frontend | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=false | doc 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=false | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=false | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=false | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=false | test-code 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=false | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=true | doc 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=true | error 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-setup",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=true | feature 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=true | setup 1`] = `
[
  "code/phases/execute/languages/typescript/setup/constraints",
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/phases/execute/languages/typescript/environments/node-api/rules",
  "code/phases/execute/languages/typescript/environments/fullstack/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/phases/execute/injections/backend-safety",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=true | test-code 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/tasks/test-code/languages/typescript/hints",
  "code/phases/execute/injections/backend-safety",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Code Job (intent x env x docs x taskType) > rev-code | fullstack | docs=true | verification 1`] = `
[
  "common/injections/directive",
  "code/base/injections/behavioral-debugging",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > explain-sys | backend 1`] = `
[
  "common/injections/directive",
  "design/base/injections/document-language",
  "design/phases/execute/injections/go-api-augmentation",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > explain-sys | frontend 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > explain-sys | fullstack 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-be | backend 1`] = `
[
  "common/injections/directive",
  "design/base/injections/document-language",
  "design/phases/execute/injections/go-api-augmentation",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-be | frontend 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-be | fullstack 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-fe | backend 1`] = `
[
  "common/injections/directive",
  "design/base/injections/document-language",
  "design/phases/execute/injections/go-api-augmentation",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-fe | frontend 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-fe | fullstack 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-full | backend 1`] = `
[
  "common/injections/directive",
  "design/base/injections/document-language",
  "design/phases/execute/injections/go-api-augmentation",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-full | frontend 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > gen-sys-full | fullstack 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > rev-sys | backend 1`] = `
[
  "common/injections/directive",
  "design/base/injections/document-language",
  "design/phases/execute/injections/go-api-augmentation",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > rev-sys | frontend 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Injection Matrix: Design Job (intent x env) > rev-sys | fullstack 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;
